--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>Apka Reactowa!</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app", style="text-align: center">
     <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
     <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
+    <div >
   </body>
 </html>
